# WorkMolde-AI

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_en.md  README_zh.md  index.html  logo-design.html  package-lock.json  package.json  prototype.html  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
cloudflare/: worker.js
docs/: PRD_DocAgent.md  PRD_Samoyed-Work.md  PRD_WorkMolde-AI.md  component_design.md  database_design.md  e2e_test_plan.md  handler_development.md  skill_development.md  task_breakdown.md  tauri_commands.md  tech_architecture.md
docs/plans/: 2026-05-23-workflow-redesign.md  2026-05-25-skills-integration-design.md  2026-05-25-skills-tools-separation-design.md  2026-05-27-prompt_engineering_design.md  2026-05-28-context-engineering-plan.md  2026-05-28-context-window-design.md  2026-06-11-code-interpreter-design.md  2026-06-14-llm-cache-optimization-design.md
docs/plans/2026-07-08-coding-agent/: 2026-07-08-coding-agent-refactor-overview.md  2026-07-08-coding-agent-refactor-phase1-core.md  2026-07-08-coding-agent-refactor-phase2-permission.md  2026-07-08-coding-agent-refactor-phase3-skill-context.md  2026-07-08-coding-agent-refactor-phase4-subagent-tools.md  2026-07-08-coding-agent-refactor-phase5-lsp.md
docs/plans/coding-agent/: 2026-07-08-coding-agent-refactor-overview.md  2026-07-08-coding-agent-refactor-phase1-core.md  2026-07-08-coding-agent-refactor-phase2-permission.md  2026-07-08-coding-agent-refactor-phase3-skill-context.md  2026-07-08-coding-agent-refactor-phase4-subagent-tools.md  2026-07-08-coding-agent-refactor-phase5-lsp.md
docs/prototypes/: samoyed-work-prototype.html  workmolde-prototype.html
docs/tests/: code-interpreter.md  e2e_test.md  tools_handlers_validation.md
scripts/: build_sidecar.ps1  sync_sidecar_dev.ps1
sidecar/: code_executor.py  main.py  requirements.txt
sidecar/handlers/: code_handler.py  excel_handler.py  font_utils.py  markdown_handler.py  pdf_handler.py  ppt_handler.py  validator.py  word_handler.py
sidecar/handlers/doc_helpers/: common.py  excel_helpers.py  ppt_helpers.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh  installer.nsi
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  document.rs  handler.rs  llm.rs  log.rs  lsp.rs  mod.rs  permission.rs  session.rs  skill.rs  token.rs  update.rs  workspace.rs
src-tauri/src/config/: app_settings.rs  llm_config.rs  mod.rs
src-tauri/src/db/: branch_repo.rs  init.rs  message_repo.rs  mod.rs  permission_repo.rs  session_repo.rs  sub_agent_message_repo.rs  token_repo.rs
src-tauri/src/events/: emitter.rs  types.rs
src-tauri/src/models/: branch.rs  handler.rs  llm.rs  message.rs  mod.rs  permission.rs  session.rs  skill.rs  tool.rs  workspace.rs
src-tauri/src/services/: attachment.rs  fs_watcher.rs  mod.rs
src-tauri/src/services/agent/: compaction.rs  context.rs  executor.rs  mod.rs  sub_executor.rs
src-tauri/src/services/agent/prompts/: agents_md_loader.rs  code_interpreter.rs  document_design.rs  mod.rs  prompt_loader.rs  task_type.rs  token_budget.rs
src-tauri/src/services/document/: mod.rs
src-tauri/src/services/handler/: builtin.rs  registry.rs
src-tauri/src/services/llm/: anthropic_adapter.rs  gemini_adapter.rs  mod.rs  openai_adapter.rs  router.rs
src-tauri/src/services/lsp/: cache.rs  client.rs  manager.rs
src-tauri/src/services/permission/: doom_loop.rs  evaluator.rs  mod.rs  registry.rs  session_whitelist.rs  types.rs  wildcard.rs
src-tauri/src/services/skill/: builtin.rs  registry.rs
src-tauri/src/services/tool/: builtin.rs  registry.rs
src-tauri/src/services/tool/builtin/: lsp_tools.rs  task.rs  todowrite.rs
src-tauri/src/services/web/: fetcher.rs  mod.rs  searcher.rs
src-tauri/src/utils/: git_utils.rs  logger.rs  mod.rs
src/components/common/: ContextMenu.tsx  CustomScrollArea.tsx  DeleteConfirmDialog.tsx  ErrorBoundary.tsx  Icon.tsx  ProviderSelector.tsx  Toast.tsx  UpdateNotification.tsx
src/components/layout/: InputArea.tsx  LeftSidebar.tsx  MainArea.tsx  MainLayout.tsx  RightSidebar.tsx  Sidebar.tsx  TopBar.tsx  WindowControls.tsx  WorkspaceGitStatus.tsx  WorkspaceSelector.tsx
src/components/preview/: MarkdownPreview.tsx  PdfCanvasViewer.tsx  PreviewOverlay.tsx
src/components/session/: HistoryPanel.tsx
src/components/settings/: AddWorkspaceDialog.tsx  AppearanceTab.tsx  GeneralTab.tsx  HandlersTab.tsx  HelpTab.tsx  LLMConfig.tsx  LspStatusPanel.tsx  PermissionTab.tsx  ProviderFormDialog.tsx  SettingsDialog.tsx  SkillsTab.tsx  TokenUsageTab.tsx  WorkspaceTab.tsx
src/components/sidebar/: AgentInfoSection.tsx  (+4 more)
src/hooks/: useAgent.ts
src/services/: errorHandler.ts  event.ts  tauri.ts
src/stores/: useAgentModeStore.ts  useAttachmentStore.ts  useSessionStore.ts  useSettingsStore.ts  useToastStore.ts  useUpdateStore.ts  useWorkflowStore.ts  useWorkspaceStore.ts
src/styles/: globals.css
src/types/: index.ts  permission.ts  session.ts  settings.ts  workflow.ts  workspace.ts
src/utils/: format.ts
(+12 files in other folders)
