[package]
name = "docagent"
version = "1.0.6"
description = "AI文档处理Agent桌面应用"
authors = ["DocAgent Team"]
license = "MIT"
edition = "2021"

[lib]
name = "docagent_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
eventsource-stream = "0.2"
log = { version = "0.4", features = ["std"] }
# tracing-appender: 提供 non_blocking 异步写入器，避免 I/O 阻塞主线程
# 仅使用其 non_blocking writer，不引入完整 tracing 生态（保留 log crate 调用）
tracing-appender = "0.2"
notify = "7"
base64 = "0.22"
dunce = "1"
# 编码转换：支持 GBK/GB2312/Big5/Shift_JIS/Latin1 等多种编码的读取和写入
encoding_rs = "0.8"
# SHA-256 哈希计算：用于 get_file_hash 工具计算文件哈希，支持去重和完整性校验
sha2 = "0.10"
# 阶段 1 新增:编程 Agent 核心工具依赖
# edit 工具:差异计算和补丁生成
similar = "2"
# glob/grep 工具:基于 ignore crate(ripgrep 封装,支持 .gitignore)
ignore = "0.4"
# glob 模式编译
globset = "0.4"
# grep 工具:正则表达式引擎
regex = "1"
# 阶段 2 新增:权限系统通配符匹配(支持 * 和 ? 通配符,适用于命令字符串和文件路径)
wildmatch = "2.4"

[dev-dependencies]
# 测试用临时文件
tempfile = "3"
